--- a/package.json
+++ b/package.json
@@ -17,6 +17,15 @@
   },
   "homepage": "https://github.com/iLunts/photobel-cashbox#readme",
   "devDependencies": {
-    "gulp": "github:gulpjs/gulp#4.0"
+    "browser-sync": "^2.23.6",
+    "gulp": "^4.0.0",
+    "gulp-changed": "^3.2.0",
+    "gulp-clean": "^0.4.0",
+    "gulp-concat-css": "^3.1.0",
+    "gulp-csso": "^3.0.1",
+    "gulp-grep": "^0.2.0",
+    "gulp-less": "^4.0.0",
+    "gulp-load-plugins": "^1.5.0",
+    "gulp-sourcemaps": "^2.6.4"
   }
 }
